# parquet-viewer-vs

./: .gitignore  README.md  pyproject.toml
src/parquet_viewer/: main.py
src/parquet_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/parquet_viewer/templates/: index.html
tests/: test_basic.py  test_multiply.py  test_upload.py
